# rust_kanban

./: .gitignore  Cargo.toml  Changelog.md  LICENSE.md  README.md  rustfmt.toml  sample_data.json
.github/workflows/: build.yml  ci.yml  release.yml  security-audit.yml
src/: constants.rs  error.rs  lib.rs  main.rs  util.rs
src/app/: actions.rs  app_helper.rs  kanban.rs  mod.rs  state.rs  ui.rs  ui_helper.rs
src/inputs/: events.rs  key.rs  mod.rs  mouse.rs
src/io/: data_handler.rs  handler.rs  io_handler.rs  logger.rs  mod.rs
src/ui/: inbuilt_themes.rs  mod.rs  text_box.rs  theme.rs  themes.rs  ui_helper.rs  ui_main.rs  widgets.rs
src/ui/rendering/: common.rs  mod.rs  utils.rs
src/ui/rendering/popup/: card_priority_selector.rs  card_status_selector.rs  change_date_format.rs  change_theme.rs  change_view.rs  command_palette.rs  confirm_discard_card_changes.rs  custom_hex_color_prompt.rs  date_time_picker.rs  edit_general_config.rs  edit_specific_keybinding.rs  edit_theme_style.rs  filter_by_tag.rs  mod.rs  save_theme_prompt.rs  select_default_view.rs  view_card.rs
src/ui/rendering/popup/widgets/: command_palette.rs  date_time_picker.rs  mod.rs  tag_picker.rs
src/ui/rendering/view/: body_help.rs  body_help_log.rs  body_log.rs  config_menu.rs  create_theme.rs  edit_keybindings.rs  help_menu.rs  load_a_save.rs  load_cloud_save.rs  log_view.rs  login.rs  main_menu_view.rs  mod.rs  new_board_form.rs  new_card_form.rs  reset_password.rs  signup.rs  title_body.rs  title_body_help.rs  title_body_help_log.rs  title_body_log.rs  zen.rs
src/ui/text_box/: helper_enums.rs  helper_structs.rs  mod.rs  utils.rs
src/ui/widgets/: close_button.rs  command_palette.rs  date_time_picker.rs  mod.rs  tag_picker.rs  toast.rs
