[package]
name = "rust-kanban"
version = "0.10.5"
authors = ["Yash Sharma <yashs662@gmail.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/yashs662/rust_kanban"
description = "A kanban board for the terminal built with ❤️ in Rust"
keywords = ["TUI", "Kanban", "CLI", "Terminal"]
categories = ["command-line-utilities", "text-editors"]

[dependencies]
log = "0.4.22"
ratatui = { version = "0.29.0", features = ["serde"] }
crossterm = "0.28.1"
tokio = { version = "1.41.1", features = ["full"] }
chrono = "0.4.38"
textwrap = "0.16.1"
eyre = "0.6.12"
home = "0.5.9"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
clap = { version = "4.5.20", features = ["derive"] }
uuid = { version = "1.11.0", features = ["v4"] }
regex = "1.11.1"
linked-hash-map = "0.5.6"
lazy_static = "1.5.0"
fxhash = "0.2.1"
parking_lot = "0.12.3"
reqwest = { version = "0.12.9", features = ["json"] }
aes-gcm = "0.10.3"
base64 = "0.22.1"
bunt = "0.2.8"
strum = "0.26.3"
strum_macros = "0.26.4"
portable-atomic = "1.9.0"
unicode-width = "0.2.0"

[dev-dependencies]
backtrace = "0.3.74"

[profile.release]
lto = true

[profile.dev]
opt-level = 1

# Used for profiling
# [profile.release]
# debug = 1
